[FIX] web: wrap search view options
When there is too many options inside search view, they didn't wrap and will overflow outside the screen.

--- a/addons/web/static/src/search/search_panel/search_view.scss
+++ b/addons/web/static/src/search/search_panel/search_view.scss
@@ -103,6 +103,7 @@
 }
 
 .o_search_options {
+    flex-wrap: wrap;
     margin: auto 0;
 }
 
